--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Course&nbsp;Registration&nbsp;home</title>
+    <title>School&nbsp;website&nbsp;home</title>
     <link href="settings/reset.css" rel="stylesheet">
     <link href="settings/styles.css" rel="stylesheet"/>
     <link href="settings/formsstyles.css" rel="stylesheet"/>
@@ -48,7 +48,7 @@
                        required
                        title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
                        type="password">
-                <input class="btn center-box " name="nslogin" onclick="processLogin()" type="submit"
+                <input  name="nslogin" onclick="processLogin()" type="submit"
                        value="Login">
 
             </form>
@@ -80,7 +80,7 @@
                        title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
                        type="password">
 
-                <input class="btn center-box" name="nelogin" onclick="processLogin()" type="submit"
+                <input  name="nelogin" onclick="processLogin()" type="submit"
                        value="Login">
 
             </form>
@@ -88,8 +88,12 @@
         </div>
 
     </div>
+<footer class="footer">
+
+</footer>
 </div>
 
+</div>
 </body>
 
 </html>
