Styled tables. Created a text file with a list of issues to solve

--- a/iframedefault.html
+++ b/iframedefault.html
@@ -5,12 +5,9 @@
     <link href="settings/reset.css" rel="stylesheet">
     <link href="settings/styles.css" rel="stylesheet"/>
     <link href="settings/formsstyles.css" rel="stylesheet"/>
-    <title>Account created</title>
+    <title>Reports</title>
 </head>
 <body>
-
-<p> This page is for testing what ever you need. It will be removed at the end</p>
-
-
+<p class="center-box" > Select a report</p>
 </body>
 </html>
