--- a/newcourse.html
+++ b/newcourse.html
@@ -21,7 +21,7 @@
 
     <div class="navbar">
         <a class="right" href="home.html" onclick="processLogout()">Logout</a>
-        <a href="adminsite.html">Reports</a>
+        <a href="adminsite.php">Reports</a>
         <a href="newemployee.html">New employee</a>
         <a href="newstudent.html">New student</a>
         <a class="active" href="newcourse.html">New course</a>
