--- a/newemployee.html
+++ b/newemployee.html
@@ -15,7 +15,7 @@
     </div>
     <div class="navbar">
         <a class="right" href="home.html" onclick="processLogout()">Logout</a>
-        <a href="adminsite.html">Reports</a>
+        <a href="adminsite.php">Reports</a>
         <a class="active" href="newemployee.html">New employee</a>
         <a href="newstudent.html">New student</a>
         <a href="newcourse.html">New course</a>
