--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
 
 
 <div class="header">
-    <h1>Welcome to your school website</h1>
+    <h1>Welcome&nbsp;to&nbsp;your&nbsp;school&nbsp;website</h1>
     <br>
 </div>
 <div class="navbar">
@@ -48,7 +48,7 @@
                        required
                        title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
                        type="password">
-                <input  name="nslogin" onclick="processLogin()" type="submit"
+                <input  name="slogin" onclick="processLogin()" type="submit"
                        value="Login">
 
             </form>
@@ -80,7 +80,7 @@
                        title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
                        type="password">
 
-                <input  name="nelogin" onclick="processLogin()" type="submit"
+                <input  name="elogin" onclick="processLogin()" type="submit"
                        value="Login">
 
             </form>
@@ -93,7 +93,7 @@
 </footer>
 </div>
 
-</div>
+
 </body>
 
 </html>
