--- a/newstudent.html
+++ b/newstudent.html
@@ -17,7 +17,7 @@
 
     <div class="navbar">
         <a class="right" href="home.html" onclick="processLogout()">Logout</a>
-        <a href="adminsite.html">Reports</a>
+        <a href="adminsite.php">Reports</a>
         <a href="newemployee.html">New employee</a>
         <a class="active" href="newstudent.html">New student</a>
         <a href="newcourse.html">New course</a>
