--- a/newstudent.html
+++ b/newstudent.html
@@ -41,17 +41,14 @@
                             <input class="form-control" name="nslastname" placeholder="Last Name" required type="text">
                         </label>
                     </div>
-                    <div class="form-group">
-                        <input class="form-control" name="nstudentname" placeholder="Enter your employee name" required
-                               type="text">
-                    </div>
+
                     <div class="form-group">
                         <input class="form-control" name="nsestreetnumber" pattern="[0-9]{1,5}"
                                placeholder="Street number" required
                                type="text">
                     </div>
                     <div class="form-group">
-                        <input class="form-control" name="nsstreetname" pattern="[0-9]{1,5}" placeholder="Street name"
+                        <input class="form-control" name="nsstreetname" placeholder="Street name"
                                required
                                type="text">
                     </div>
@@ -62,7 +59,8 @@
                         <input class="form-control" name="nsprovince" placeholder="Province" required type="text">
                     </div>
                     <div class="form-group">
-                        <input class="form-control" name="nspostalcode" pattern="[A-Z][1-9][A-Z] [1-9][A-Z][1-9]"
+                        <input class="form-control" name="nspostalcode"
+                               pattern="^[A-Z][1-9][a-zA-Z]\s{1}[1-9][A-Z][1-9]$"
                                placeholder="Postal Code" required type="text">
                     </div>
                     <button class="btn center-box" onclick="window.location.href='adminsite.html';">Cancel
@@ -70,10 +68,10 @@
                 </div>
                 <div class=" column">
                     <div class="form-group">
-                        <input class="form-control" name="nsemail" placeholder="Email" required type="email">
+                        <input class="form-control" name="nsemail" placeholder="Email" required type="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$">
                     </div>
                     <div class="form-group">
-                        <input class="form-control" name="nphone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"
+                        <input class="form-control" name="nphone" pattern="[0-9]{3}\s[0-9]{2}-[0-9]{3}"
                                placeholder="Phone number"
                                required
                                type="tel">
