--- a/studentsite.html
+++ b/studentsite.html
@@ -16,7 +16,7 @@
 </div>
 
 <div class="navbar">
-    <a href="home.html" onclick="processLogout()">Home</a>
+    <a href="home.html" >Home</a>
 </div>
 
 
