--- a/home.html
+++ b/home.html
@@ -7,6 +7,7 @@
     <link href="settings/styles.css" rel="stylesheet"/>
     <link href="settings/formsstyles.css" rel="stylesheet"/>
     <meta content="width=device-width, initial-scale=1" name="viewport">
+
 </head>
 <body>
 
@@ -32,24 +33,23 @@
             <span>If you are a student, login to the student course registration page and sign in to your account with your student ID and your password</span>
             <br><br>
 
-            <form action="BusinessLogic.php" method="post">
+            <form action="BusinessLogic.php" method="post" onsubmit="return validatehsformForm()" name="hsform" >
 
 
                 <label for="studentid"> Student ID</label>
-                <input class="form-control" id="studentid" name="studentid" pattern="^\w{8}"
-                       placeholder="Student ID" required
+
+                <input class="form-control" id="studentid" name="studentid"
+                       placeholder="Student ID" autocomplete="off"
                        type="text">
                 <br>
 
                 <label for="studentpassword"> Password</label>
-                <input class="form-control" id="studentpassword" name="spassword"
-                       pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
-                       placeholder="Password"
-                       required
-                       title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
+                <input class="form-control" id="studentpassword"  name="spassword" placeholder="Password"
+                       autocomplete="off"  title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
                        type="password">
-                <input  name="slogin" onclick="processLogin()" type="submit"
-                       value="Login">
+
+
+                <input  name="slogin" type="submit"  value="Login">
 
             </form>
         </div>
@@ -64,36 +64,35 @@
             <span>If you are as administrator, login to the employee course registration page and sign in to your account with your employee ID and your password</span>
             <br><br>
 
-            <form action="BusinessLogic.php" method="POST" target="_self">
+            <form action="BusinessLogic.php" method="POST" onsubmit="return validateheformForm()" name="heform" target="_self">
 
                 <label for="employeeid"> Administrator ID</label>
-                <input class="form-control " id="employeeid" name="employeeid" pattern="^\w{8}"
-                       placeholder="Employee ID" required
+                <input class="form-control success" id="employeeid" name="employeeid" autocomplete="off"
+                       placeholder="Employee ID"
                        type="text">
                 <br>
 
                 <label for="employeepassword">Password</label>
-                <input class="form-control " id="employeepassword" name="epassword"
-                       pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+                <input class="form-control " id="employeepassword" name="epassword" autocomplete="off"
                        placeholder="Password"
-                       required
-                       title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
+                           title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
                        type="password">
 
-                <input  name="elogin" onclick="processLogin()" type="submit"
-                       value="Login">
+
+                <input  name="elogin" type="submit"
+                        value="Login">
 
             </form>
 
         </div>
 
     </div>
-<footer class="footer">
+    <footer class="footer">
 
-</footer>
+    </footer>
 </div>
 
-
+<script src="settings/home.js" type="text/javascript"> </script>
 </body>
 
 </html>
