--- a/newcourse.html
+++ b/newcourse.html
@@ -20,7 +20,7 @@
 
 
     <div class="navbar">
-        <a class="right" href="home.html" onclick="processLogout()">Logout</a>
+        <a class="right" href="home.html" >Logout</a>
         <a href="adminsite.php">Reports</a>
         <a href="newemployee.html">New employee</a>
         <a href="newstudent.html">New student</a>
@@ -31,7 +31,7 @@
 
     <div class="content-wrapper w-container">
 
-        <form action="BusinessLogic.php" method="post" target="_self">
+        <form action="BusinessLogic.php" method="post" name="ncform" onsubmit="return validatencformForm()" target="_self">
             <div class="row card">
                 <div class="column">
 
@@ -72,17 +72,9 @@
                     <div class="form-group">
                         <input class="form-control" name="room" placeholder="Room" required type="email">
                     </div>
-                    <div class="form-group">
-                        <input class="form-control" name="language" pattern="\D+" placeholder="Language" required
-                               type="text">
-                    </div>
-
-                    <div class="form-group">
-                        <input class="form-control" name="langLevel" placeholder="Language level" required type="text">
-                    </div>
 
 
-                    <input class="center-box" name="ncsubmit" onClick="saveconfirmation()" type="submit" value="save">
+                    <input class="center-box" name="ncsubmit" type="submit" value="save">
 
                 </div>
             </div>
