Added js file for newcourse

--- a/newcourse.html
+++ b/newcourse.html
@@ -80,8 +80,9 @@
             </div>
         </form>
 
+        <script src="setting/newcourse.js" type="text/javascript"></script>
         <footer class="footer">
-            test
+
         </footer>
     </div>
 </div>
