--- a/newemployee.html
+++ b/newemployee.html
@@ -102,6 +102,6 @@
     </div>
 </div>
 
-<script src="settings/functions.js" type="text/javascript"></script>
+<script src="settings/newemployee.js" type="text/javascript"></script>
 </body>
 </html>
