--- a/newemployee.html
+++ b/newemployee.html
@@ -5,6 +5,8 @@
     <link href="settings/reset.css" rel="stylesheet">
     <link href="settings/styles.css" rel="stylesheet"/>
     <link href="settings/formsstyles.css" rel="stylesheet"/>
+
+
     <title>New&nbsp;administrator&nbsp;account</title>
 </head>
 <body>
@@ -25,31 +27,37 @@
     <div class="content-wrapper w-container ">
 
 
-        <form action="BusinessLogic.php" name="nsform" method="post" target="_self">
+        <form novalidate action="BusinessLogic.php" onsubmit="return validateneformForm()" name="neform" method="post" target="_self">
             <div class="row card">
                 <div class="column">
 
                     <div class="form-group">
 
-                        <input class="form-control" name="nename" placeholder="Name" required type="text">
+                        <input class="form-control" name="nename" placeholder="Name"  type="text">
                     </div>
                     <div class="form-group">
-                        <input class="form-control" name="nelastname" placeholder="Last Name" required type="text">
+                        <input class="form-control" name="nelastname" placeholder="Last Name"  type="text">
                     </div>
 
                     <div class="form-group">
-                        <input class="form-control" name="neestreetnumber" pattern="[0-9]{1,5}"
-                               placeholder="Street number" required
+                        <input class="form-control" name="neestreetnumber"
+                               placeholder="Street number" 
                                type="text">
                     </div>
                     <div class="form-group">
-                        <input class="form-control" name="nestreetname" placeholder="Street name" required type="text">
+                        <input class="form-control" name="nestreetname" placeholder="Street name"  type="text">
                     </div>
                     <div class="form-group">
-                        <input class="form-control" name="necity" placeholder="City" required type="text">
+                        <input class="form-control" name="necity" placeholder="City"  type="text">
                     </div>
                     <div class="form-group">
-                        <input class="form-control" name="neprovince" placeholder="Province" required type="text">
+                        <input class="form-control" name="neprovince" placeholder="Province"  type="text">
+                    </div>
+
+                    <div class="form-group">
+                        <input class="form-control" name="necountry" placeholder="Country"
+                               type="text">
+                        <small></small>
                     </div>
 
                     <button class="btn center-box" onclick="window.location.href='adminsite.html';">Cancel
@@ -58,25 +66,25 @@
 
                 <div class="column">
                     <div class="form-group">
-                        <input class="form-control" name="nepostalcode" pattern="^[A-Z][1-9][a-zA-Z]\s{1}[1-9][A-Z][1-9]$"
-                               placeholder="Postal Code" required type="text">
+                        <input class="form-control" name="nepostalcode"
+                               placeholder="Postal Code"  type="text">
                     </div>
                     <div class="form-group">
-                        <input class="form-control" name="nemail" placeholder="Email" required type="email">
+                        <input class="form-control" name="neemail" placeholder="Email"  type="email">
                     </div>
                     <div class="form-group">
-                        <input class="form-control" name="nephone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}[0-9]{2}"
+                        <input class="form-control" name="nephone"
                                placeholder="Phone number"
-                               required type="tel">
+                                type="tel">
                     </div>
                     <div class="form-group">
-                        <input class="form-control" name="nedateofbirth" placeholder="Date of birth" required
+                        <input class="form-control" name="nedateofbirth" placeholder="Date of birth" 
                                type="date">
                     </div>
                     <div class="form-group">
-                        <input class="form-control" name="nepassword" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+                        <input class="form-control" name="nepassword"
                                placeholder="Password"
-                               required
+                               
                                title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
                                type="password">
                     </div>
@@ -84,7 +92,7 @@
                         <input class="form-control" name="neconfirmpassword"
 
                                placeholder="confirm-password"
-                               required
+                               
                                title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
                                type="password">
 
@@ -97,7 +105,7 @@
         </form>
 
         <footer class="footer">
-            test
+
         </footer>
     </div>
 </div>
