--- a/newstudent.html
+++ b/newstudent.html
@@ -27,7 +27,7 @@
     <div class="content-wrapper w-container ">
 
         <!--action="BusinessLogic.php"-->
-        <form novalidate name="nsform"  method="post" target="_self">
+        <form novalidate name="nsform" onsubmit="return validatensformForm()" method="post" target="_self">
             <div class="row card">
                 <div class="column">
                     <div class="form-group">
@@ -72,6 +72,12 @@
                                placeholder="Postal Code" type="text">
                         <small></small>
                     </div>
+                    <div class="form-group">
+                        <input class="form-control" name="nscountry" placeholder="Country" autocomplete="off"
+                               type="text">
+                        <small></small>
+                    </div>
+
                     <button class="btn center-box" onclick="window.location.href='adminsite.html';">Cancel
                     </button>
                 </div>
@@ -116,11 +122,11 @@
         </form>
 
         <footer class="footer">
-            test
+
         </footer>
     </div>
 </div>
 
 
-<script src="settings/functions.js" type="text/javascript"></script>
+<script src="settings/newstudent.js" type="text/javascript"></script>
 </body>
