--- a/home.html
+++ b/home.html
@@ -39,13 +39,13 @@
                 <label for="studentid"> Student ID</label>
 
                 <input class="form-control" id="studentid" name="studentid"
-                       placeholder="Student ID" autocomplete="off"
+                       placeholder="Student ID"
                        type="text">
                 <br>
 
                 <label for="studentpassword"> Password</label>
                 <input class="form-control" id="studentpassword"  name="spassword" placeholder="Password"
-                       autocomplete="off"  title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
+                         title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
                        type="password">
 
 
@@ -67,13 +67,13 @@
             <form action="BusinessLogic.php" method="POST" onsubmit="return validateheformForm()" name="heform" target="_self">
 
                 <label for="employeeid"> Administrator ID</label>
-                <input class="form-control success" id="employeeid" name="employeeid" autocomplete="off"
+                <input class="form-control success" id="employeeid" name="employeeid"
                        placeholder="Employee ID"
                        type="text">
                 <br>
 
                 <label for="employeepassword">Password</label>
-                <input class="form-control " id="employeepassword" name="epassword" autocomplete="off"
+                <input class="form-control " id="employeepassword" name="epassword"
                        placeholder="Password"
                            title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
                        type="password">
