--- a/newcourse.html
+++ b/newcourse.html
@@ -36,29 +36,24 @@
                 <div class="column">
 
                     <div class="form-group">
-                        <input class="form-control" name="courseCode" placeholder="Course code" required type="text">
+                        <input class="form-control" name="courseCode" placeholder="Course code"  type="text">
                     </div>
                     <div class="form-group">
-                        <input class="form-control" name="courseTitle" placeholder="Course Title" required type="text">
+                        <input class="form-control" name="courseTitle" placeholder="Course Title"  type="text">
                     </div>
                     <div class="form-group">
-                        <input class="form-control" name="semester" placeholder="Semester" required type="text">
+                        <input class="form-control" name="semester" placeholder="Semester"  type="text">
                     </div>
 
                     <div class="form-group">
-                        <input class="form-control" name="days" pattern="\D*" placeholder="days" required type="text">
+                        <input class="form-control" name="days" pattern="\D*" placeholder="Days"  type="text">
                     </div>
                     <div class="form-group">
                         <input class="form-control" name="time" placeholder="Time"
-                               required type="text">
+                                type="text">
                     </div>
 
-                    <div class="form-group">
-                        <input class="form-control" name="startDate" placeholder="Start Date" required type="date">
-                    </div>
-                    <div class="form-group">
-                        <input class="form-control" name="endDate" placeholder="End date" required type="date">
-                    </div>
+
 
                     <button class="btn center-box" onclick="window.location.href='adminsite.html';">Cancel
                     </button>
@@ -66,11 +61,19 @@
                 </div>
 
                 <div class=" column">
+
                     <div class="form-group">
-                        <input class="form-control" name="instructor" placeholder="Instructor" required type="text">
+                        <input class="form-control" name="startDate" placeholder="Start Date"  type="date">
                     </div>
                     <div class="form-group">
-                        <input class="form-control" name="room" placeholder="Room" required type="email">
+                        <input class="form-control" name="endDate" placeholder="End date"  type="date">
+                    </div>
+
+                    <div class="form-group">
+                        <input class="form-control" name="instructor" placeholder="Instructor"  type="text">
+                    </div>
+                    <div class="form-group">
+                        <input class="form-control" name="room" placeholder="Room"  type="text">
                     </div>
 
 
@@ -80,11 +83,11 @@
             </div>
         </form>
 
-        <script src="setting/newcourse.js" type="text/javascript"></script>
         <footer class="footer">
 
         </footer>
     </div>
 </div>
+<script src="settings/newcourse.js" type="text/javascript"></script>
 </body>
 </html>
