--- a/newstudent.html
+++ b/newstudent.html
@@ -33,84 +33,90 @@
                     <div class="form-group">
 
 
-                        <input class="form-control" name="nsname" placeholder="Name" autocomplete="off" type="text">
+                        <input class="form-control" name="nsname" placeholder="Name"  type="text">
 
-                        <small></small>
+
                     </div>
                     <div class="form-group">
 
-                        <input class="form-control" name="nslastname" placeholder="Last Name" autocomplete="off"
+                        <input class="form-control" name="nslastname" placeholder="Last Name"
                                type="text">
 
-                        <small></small>
+
                     </div>
 
                     <div class="form-group">
                         <input class="form-control" name="nsestreetnumber"
                                placeholder="Street number"
                                type="text">
-                        <small></small>
+
                     </div>
                     <div class="form-group">
                         <input class="form-control" name="nsstreetname" placeholder="Street name"
 
-                               autocomplete="off" type="text">
-                        <small></small>
-                    </div>
-                    <div class="form-group">
-                        <input class="form-control" name="nscity" placeholder="City" autocomplete="off" type="text">
-                        <small></small>
-                    </div>
-                    <div class="form-group">
-                        <input class="form-control" name="nsprovince" placeholder="Province" autocomplete="off"
-                               type="text">
-                        <small></small>
-                    </div>
-                    <div class="form-group">
-                        <input class="form-control" name="nspostalcode" autocomplete="off"
+                                type="text">
 
-                               placeholder="Postal Code" type="text">
-                        <small></small>
                     </div>
                     <div class="form-group">
-                        <input class="form-control" name="nscountry" placeholder="Country" autocomplete="off"
+                        <input class="form-control" name="nscity" placeholder="City"  type="text">
+
+                    </div>
+                    <div class="form-group">
+                        <input class="form-control" name="nsprovince" placeholder="Province"
                                type="text">
-                        <small></small>
+
+                    </div>
+
+                    <div class="form-group">
+                        <input class="form-control" name="nscountry" placeholder="Country"
+                               type="text">
+
                     </div>
 
                     <button class="btn center-box" onclick="window.location.href='adminsite.html';">Cancel
                     </button>
+
                 </div>
                 <div class=" column">
+
                     <div class="form-group">
-                        <input class="form-control" name="nsemail" autocomplete="off" placeholder="Email" type="email">
-                        <small></small>
+                        <input class="form-control" name="nspostalcode"
+
+                               placeholder="Postal Code" type="text">
+
                     </div>
                     <div class="form-group">
-                        <input class="form-control" name="nsphone" autocomplete="off" placeholder="Phone number"
+
+
+
+                        <input class="form-control" name="nsemail"  placeholder="Email" type="email">
+
+                    </div>
+                    <div class="form-group">
+                        <input class="form-control" name="nsphone"  placeholder="Phone number"
                                type="tel">
-                        <small></small>
+
                     </div>
                     <div class="form-group">
-                        <input class="form-control" name="nsdateofbirth" placeholder="Date of birth" autocomplete="off"
+                        <input class="form-control" name="nsdateofbirth" placeholder="Date of birth"
                                type="date">
-                        <small></small>
+
                     </div>
                     <div class="form-group">
-                        <input class="form-control" name="nspassword" autocomplete="off"
+                        <input class="form-control" name="nspassword"
                                placeholder="Password"
 
                                title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
                                type="password">
-                        <small></small>
+
                     </div>
                     <div class="form-group">
-                        <input class="form-control" name="nsconfirm-password" autocomplete="off"
+                        <input class="form-control" name="nsconfirm-password"
                                placeholder="confirm-password"
 
                                title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
                                type="password">
-                        <small></small>
+
                     </div>
 
                     <input class="center-box" name="nssubmit" type="submit" value="Save">
